# src/schema/responses.ts
@@ -1,35 +1,42 @@
+import scalars from "./scalars";
+
+const { username, address, balance, signature, publicKey } = scalars;
+
+const respProps = (props = {}) =>
+  Object.assign(
+    {
+      success: { type: "boolean" },
+      error: { type: "string" }
+    },
+    props
+  );
+
 export default {
   account: {
     id: "responses.account",
     type: "object",
-    properties: {
-      success: {
-        type: "boolean"
-      },
-      error: {
-        type: "string"
-      },
+    properties: respProps({
       account: {
         type: "object",
         properties: {
-          address: { type: "string" },
-          balance: { type: "number" },
+          address,
+          balance,
           multisignatures: {
             type: "array",
-            items: { type: "string", format: "binary" }
+            items: signature
           },
-          publicKey: { type: "string", format: "binary" },
-          secondPublicKey: { type: "string", format: "binary" },
+          publicKey,
+          secondPublicKey: publicKey,
           secondSignature: { type: "boolean" },
           u_multisignatures: {
             type: "array",
-            items: { type: "string", format: "binary" }
+            items: signature
           },
-          unconfirmedBalance: { type: "number" },
+          unconfirmedBalance: balance,
           unconfirmedSignature: { type: "boolean" }
         }
       }
-    },
+    }),
     example: {
       success: true,
       account: {
@@ -42,6 +49,77 @@ export default {
         secondSignature: false,
         u_multisignatures: []
       }
+    }
+  },
+  balance: {
+    id: "responses.balance",
+    type: "object",
+    properties: respProps({
+      balance,
+      unconfirmedBalance: balance
+    }),
+    example: {
+      balance: 10,
+      unconfirmedBalance: 20
+    }
+  },
+  publicKey: {
+    id: "responses.publicKey",
+    type: "object",
+    properties: respProps({
+      publicKey
+    }),
+    example: {
+      publicKey: "0x1242acdf..."
+    }
+  },
+  delegates: {
+    id: "responses.delegates",
+    type: "object",
+    properties: respProps({
+      publicKey,
+      delegates: {
+        type: "array",
+        items: {
+          address,
+          publicKey,
+          username,
+          approval: { type: "number" },
+          rank: { type: "number" },
+          rate: { type: "number" },
+          missedblocks: { type: "number" },
+          producedblocks: { type: "number" },
+          productivity: { type: "number" },
+          vote: { type: "number" }
+        }
+      }
+    })
+  },
+  fee: {
+    id: "responses.fee",
+    type: "object",
+    proprties: respProps({
+      fee: { type: "number" }
+    })
+  },
+  topAccounts: {
+    id: "respones.topAccounts",
+    type: "object",
+    properties: respProps({
+      accounts: {
+        address,
+        balance,
+        publicKey
+      }
+    })
+  },
+  deprecated: {
+    id: "responses.deprecated",
+    type: "object",
+    properties: respProps(),
+    example: {
+      success: false,
+      message: "Method is deprecated"
     }
   }
 };
